codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__pending_input_preview__tests__render_one_pending_steer.snap
---
source: tui/src/bottom_pane/pending_input_preview.rs
assertion_line: 367
expression: "format!(\"{buf:?}\")"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 48, height: 4 },
    content: [
        "• Messages to be submitted after next tool call ",
        "  (press esc to interrupt and send immediately) ",
        "  ↳ Please continue.                            ",
        "    ⇧← edit last queued message                 ",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 2, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 9, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 12, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 47, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 20, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 4, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 6, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 31, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
